# Shaladrasill

./: .gitignore  CMakeLists.txt  readme.md
include/: GL.h  definition.h  geometry.h  model.h  tgaimage.h
src/: GL.cpp  main.cpp  model.cpp  tgaimage.cpp
